# go2w_estop

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  THIRD_PARTY_NOTICES.md
docs/: estop_spec.md
estop_interfaces/: CMakeLists.txt  package.xml
estop_interfaces/msg/: EstopStatus.msg
operator_client/: Makefile  package.xml  setup.cfg  setup.py
operator_client/config/: operator_client_params.yaml
operator_client/docker/: Dockerfile  docker-compose.yml  run.sh
operator_client/go2w_estop_operator/: __init__.py  nic_validator.py  operator_node.py  terminal_ui.py
operator_client/launch/: operator_client.launch.py
operator_client/resource/: go2w_estop_operator
robot_service/: Makefile  package.xml  setup.cfg  setup.py
robot_service/config/: robot_service_params.yaml
robot_service/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
robot_service/go2w_estop_robot/: __init__.py  config.py  robot_adapter.py  robot_service_node.py  state_machine.py
robot_service/launch/: robot_service.launch.py
robot_service/resource/: go2w_estop_robot
scripts/test/: hard_stop_test.sh  nic_validation_test.sh  protective_stop_test.sh  smoke_test.sh
