<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2w_estop_operator</name>
  <version>0.1.0</version>
  <description>Operator-side virtual emergency stop client for the Unitree GO2-W.</description>
  <maintainer email="tanaka.koki.t6r@research.f-rei.go.jp">Koki Tanaka</maintainer>
  <license>BSD-3-Clause</license>

  <depend>estop_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
